# compositional-prompting

./: CLAUDE.md  ENHANCEMENTS.md  README.md  compositional_prompting_tutorial.ipynb  demo_action_space.py  demo_enhanced.py  mcts_reasoning_technical_report.tex  pyproject.toml  walkthrough_example.py
compositional_prompting/: __init__.py  enhancements.py
compositional_prompting/examples/: __init__.py  demo.py
tests/: test_core.py  test_core_advanced.py  test_enhancements.py  test_integration.py
